--- a/CW/week15/blogplatform/template/base.html
+++ b/CW/week15/blogplatform/template/base.html
@@ -6,21 +6,25 @@
     </head>
 
     <body>
-        <header>
-            <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-5">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
+                <a class="navbar-brand" href="">Start blog platform</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">creat post</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Category</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="http://localhost:8000/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="http://localhost:8000/post">Posts</a></li>
+                        <li class="nav-item"><a class="nav-link" href="http://localhost:8000/category">Category</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Author</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
+        <header class="bg-dark py-5">
+            <div class="container px-5">
+                <div class="row gx-5 justify-content-center">
+                </div>
+            </div>
         </header>
 
             {% block content %}
@@ -28,4 +32,7 @@
             {% endblock content %}
 
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+     crossorigin="anonymous"></script>
 </html>
