--- a/CW/week15/blogplatform/templates/blog/post_detail.html
+++ b/CW/week15/blogplatform/templates/blog/post_detail.html
@@ -8,7 +8,7 @@
             <div class="card-body">
               <h5 class="card-title">{{ post.title }}</h5>
               <p class="card-text">{{ post.content }}</p>
-              <p class="card-text">Author: {{ post.author }}</p>
+              <p class="card-text">{{ post.author }} | {{ post.publication_date }}</p>
             </div>
           </div>
       </div>
