--- a/CW/week15/blogplatform/templates/base.html
+++ b/CW/week15/blogplatform/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <html>
     <head>
         <title>Blog Platform</title>
@@ -12,10 +13,10 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="http://localhost:8000/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="http://localhost:8000/post">Posts</a></li>
-                        <li class="nav-item"><a class="nav-link" href="http://localhost:8000/category">Category</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Author</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'posts' %}">Posts</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'categorys' %}">Category</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'authors' %}">Author</a></li>
                     </ul>
                 </div>
             </div>
@@ -31,8 +32,8 @@
 
             {% endblock content %}
 
-    </body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
      crossorigin="anonymous"></script>
+    </body>
 </html>
