--- a/CW/week15/blogplatform/templates/base.html
+++ b/CW/week15/blogplatform/templates/base.html
@@ -15,7 +15,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'posts' %}">Posts</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'categorys' %}">Category</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'categories' %}">Category</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'authors' %}">Author</a></li>
                     </ul>
                 </div>
