--- a/CW/week15/blogplatform/templates/base.html
+++ b/CW/week15/blogplatform/templates/base.html
@@ -4,6 +4,10 @@
         <title>Blog Platform</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+        <style>
+            #profile:hover {box-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue}
+        </style>
     </head>
 
     <body>
@@ -31,7 +35,6 @@
             {% block content %}
 
             {% endblock content %}
-
          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
      crossorigin="anonymous"></script>
