--- a/CW/week16/task_management/templates/task/category.html
+++ b/CW/week16/task_management/templates/task/category.html
@@ -1,17 +1,78 @@
 {% extends 'base.html' %}
+{% block style %}
+    <style>
+        body {
+            background-color: #00838F
+        }
 
+        .advanced {
+            text-decoration: none;
+            font-size: 15px;
+            font-weight: 500
+        }
+
+        .btn-secondary,
+        .btn-secondary:focus,
+        .btn-secondary:active {
+            color: #fff;
+            background-color: #00838f !important;
+            border-color: #00838f !important;
+            box-shadow: none
+        }
+
+        .advanced {
+            color: #00838f !important
+        }
+
+        .form-control:focus {
+            box-shadow: none;
+            border: 1px solid #00838f
+        }
+    </style>
+{% endblock %}
 
 {% block content %}
     <section class="vh-100" style="background-color: grey;">
         <div class="container py-5 h-100">
+            <div class="mt-3">
+                <a data-toggle="collapse" href="#collapseExample" role="button"
+                   aria-expanded="false"
+                   aria-controls="collapseExample"
+                   class="advanced text-decoration-none text-light"> Add category
+                    Filters <i class="fa fa-angle-down"></i>
+                </a>
+                <div class="collapse" id="collapseExample">
+                    <div class="card card-body">
+                        <div class="row mx-2">
+                            <div class="col-md-3 form-check d-flex">
+                                <form action="" method="POST">
+                                    {% csrf_token %}
+                                    <div class="form-group">
+                                        <label for="category_name">Category name:</label>
+                                        <input type="text" class="form-control" id="category_name" name="category_name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="category_description">Category description</label>
+                                        <textarea class="form-control" id="category_description"
+                                                  name="category_description"></textarea>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <button class="btn btn-secondary btn-block">Add</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-5">
                     {% for category in categories %}
                         <div class="card my-4 justify-content-center" style="background: rgba(50, 100, 150, .3)">
                             <div class="card-body ">
-                                <h5 class="card-title text-center" >
+                                <h5 class="card-title text-center">
                                     <a class="text-decoration-none text-dark"
-                                   href="{% url 'category_detail' category.pk %}">{{ category.name }}</a>
+                                       href="{% url 'category_detail' category.pk %}">{{ category.name }}</a>
                                 </h5>
                                 <p class="card-text text-light">{{ category.description|truncatewords:5 }}</p>
                             </div>
@@ -19,6 +80,7 @@
                     {% endfor %}
                 </div>
             </div>
+
         </div>
     </section>
 {% endblock %}
