feat: add create task form

--- a/CW/week16/task_management/templates/task/search.html
+++ b/CW/week16/task_management/templates/task/search.html
@@ -28,8 +28,7 @@
                                         <a data-toggle="collapse" href="#collapseExample" role="button"
                                            aria-expanded="false"
                                            aria-controls="collapseExample"
-                                           class="advanced text-decoration-none text-light"> Advance Search With
-                                            Filters <i class="fa fa-angle-down"></i>
+                                           class="advanced text-decoration-none text-light"> Advance Search With<i class="fa fa-angle-down"></i>
                                         </a>
                                         <div class="collapse" id="collapseExample">
                                             <div class="card card-body">
