--- a/CW/week16/task_management/templates/task/category.html
+++ b/CW/week16/task_management/templates/task/category.html
@@ -34,32 +34,43 @@
 {% block content %}
     <section class="vh-100" style="background-color: grey;">
         <div class="container py-5 h-100">
-            <div class="mt-3">
-                <a data-toggle="collapse" href="#collapseExample" role="button"
-                   aria-expanded="false"
-                   aria-controls="collapseExample"
-                   class="advanced text-decoration-none text-light"> Add category
-                    Filters <i class="fa fa-angle-down"></i>
-                </a>
-                <div class="collapse" id="collapseExample">
-                    <div class="card card-body">
-                        <div class="row mx-2">
-                            <div class="col-md-3 form-check d-flex">
-                                <form action="" method="POST">
-                                    {% csrf_token %}
-                                    <div class="form-group">
-                                        <label for="category_name">Category name:</label>
-                                        <input type="text" class="form-control" id="category_name" name="category_name">
+            <div class="container px-4 px-lg-5">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-10">
+                        <div class="card p-3 py-4" style="background: rgba(50, 100, 150, .3)">
+                            <div class="mt-3">
+                                <a data-toggle="collapse" href="#collapseExample" role="button"
+                                   aria-expanded="false"
+                                   aria-controls="collapseExample"
+                                   class="advanced text-decoration-none text-light"> Add category
+                                    Filters <i class="fa fa-angle-down"></i>
+                                </a>
+                                <div class="collapse" id="collapseExample">
+                                    <div class="card card-body">
+                                        <div class="row g-3 mt-2 justify-content-center">
+                                            <form action="{% url 'categories' %}" method="POST">
+                                                <div class="col-md-3 justify-content-center d-flex">
+
+                                                    {% csrf_token %}
+                                                    <div class="form-group text-dark">
+                                                        <label for="category_name">Category name:</label>
+                                                        <input type="text" class="form-control" id="category_name"
+                                                               name="category_name">
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-3">
+                                                    <div class="form-group">
+                                                        <label for="category_description">Category description</label>
+                                                        <textarea class="form-control" id="category_description"
+                                                                  name="category_description"></textarea>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-3">
+                                                    <button class="btn btn-secondary btn-block">Add</button>
+                                                </div>
+                                        </form>
                                     </div>
-                                    <div class="form-group">
-                                        <label for="category_description">Category description</label>
-                                        <textarea class="form-control" id="category_description"
-                                                  name="category_description"></textarea>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <button class="btn btn-secondary btn-block">Add</button>
-                                    </div>
-                                </form>
+                                </div>
                             </div>
                         </div>
                     </div>
