--- a/CW/week16/task_management/templates/task/tasks_list.html
+++ b/CW/week16/task_management/templates/task/tasks_list.html
@@ -7,87 +7,183 @@
 {% block content %}
     <section class="vh-100" style="background-color: grey;">
         <div class="container py-5 h-100">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col col-lg-11 col-xl-9">
-                    <div class="card rounded-3">
-                        <div class="card-body p-4">
+            <div class="container px-4 px-lg-5">
+                <div class="row d-flex">
+                    <div class="col-md-10">
+                        <div class="card p-3 py-4" style="background: rgba(50, 100, 150, .3)">
+                            <div class="mt-3">
+                                <a data-toggle="collapse" href="#collapseExample" role="button"
+                                   aria-expanded="false"
+                                   aria-controls="collapseExample"
+                                   class="advanced text-decoration-none text-light"> Add new task
+                                    <i class="fa fa-angle-down"></i>
+                                </a>
+                                <div class="collapse" id="collapseExample">
+                                    <div class="card card-body">
+                                        <form action="{% url 'task_list' %}" method="POST">
+                                            {% csrf_token %}
+                                            <div class="row g-3 mt-2 flex-wrap">
+                                                <div class="col-md-4">
+                                                    <div class="form-group text-dark">
+                                                        <label for="task_name"></label>
+                                                        <input type="text" class="form-control" id="task_name"
+                                                               placeholder="Task title:"
+                                                               name="task_name">
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4">
+                                                    <div class="form-group">
+                                                        <label for="task_description"></label>
+                                                        <textarea class="form-control" id="task_description"
+                                                                  placeholder="Task description:"
+                                                                  name="task_description"></textarea>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4">
+                                                    <div class="form-group">
+                                                        <select id="select" class="form-select" multiple
+                                                                aria-label="multiple select example" name="tags">
+                                                            <option selected>Select task tag(multi choice):</option>
 
-                            <h4 class="text-center my-3 pb-3">Task App</h4>
+                                                            {% for tag in tags %}
+                                                                <option value="{{ tag.id }}"> {{ tag.label }} </option>
+                                                            {% endfor %}
+                                                        </select>
+                                                        <label for="select" class="form-label select-label"></label>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4">
+                                                    <div class="form-group">
+                                                        <label for="status"></label>
+                                                        <select id="status" class="form-select" name="status">
+                                                            <option value="" selected disabled>Select task status:
+                                                            </option>
+                                                            {% for stat in stats %}
+                                                                <option value="{{ stat }}">{{ stat }}</option>
+                                                            {% endfor %}
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4">
+                                                    <div class="form-group">
+                                                        <select id="select" class="form-select" name="category">
+                                                            <option selected>Select task category:</option>
+                                                            {% for category in categories %}
+                                                                <option value="{{ category.id }}"> {{ category.name }} </option>
+                                                            {% endfor %}
+                                                        </select>
+                                                        <label for="select" class="form-label select-label"></label>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4">
+                                                    <div class="form-group">
+                                                        <label for="formGroupExampleInput3"></label>
+                                                        <input required type="date" class="form-control"
+                                                               id="formGroupExampleInput3" placeholder="due_date"
+                                                               name="due_date">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <button class="btn btn-secondary btn-block">Add</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col col-lg-11 col-xl-9">
+                        <div class="card rounded-3">
+                            <div class="card-body p-4">
+                                <h4 class="text-center my-3 pb-3">Task App</h4>
 
-                            <table class="table table-striped table-hover mb-4">
-                                <thead>
-                                <tr>
-                                    <th scope="col">No.</th>
-                                    <th scope="col">
-                                        <a class="text-decoration-none text-dark"
-                                           href="?{% if page %}page={{ page }}&{% endif %}sort=title&order={{ order|default:'asc' }}">Todo item</a>
-                                    </th>page
-                                    <th scope="col">
-                                        <a class="text-decoration-none text-dark"
-                                           href="?{% if page %}page={{ page }}&{% endif %}sort=category&order={{ order|default:'asc' }}">Category</a>
-                                    </th>
-                                    <th scope="col">
-                                        <a class="text-decoration-none text-dark"
-                                           href="?{% if page %}page={{ page }}&{% endif %}sort=status&order={{ order|default:'asc' }}">Status</a>
-                                    </th>
-                                    <th scope="col">
-                                        <a class="text-decoration-none text-dark"
-                                           href="?{% if page %}page={{ page }}&{% endif %}sort=due_date&order={{ order|default:'asc' }}">Due date</a>
-                                    </th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                {% for task in tasks %}
-                                    <tr class="clickable-row" data-href="{% url 'task_detail' task.id %}">
-                                        <th scope="row">{{ forloop.counter }}</th>
-                                        <td><a class="text-decoration-none text-dark"
-                                               href="{% url 'task_detail' task.id %}">{{ task.title }}</a></td>
-                                        <td><a class="text-decoration-none text-dark"
-                                               href="{% url 'category_detail' task.category.id %}">{{ task.category }}</a>
-                                        </td>
-                                        <td>{{ task.get_status_display }}</td>
-                                        <td>{{ task.due_date }}</td>
-                                        <td></td>
+                                <table class="table table-striped table-hover mb-4">
+                                    <thead>
+                                    <tr>
+                                        <th scope="col">No.</th>
+                                        <th scope="col">
+                                            <a class="text-decoration-none text-dark"
+                                               href="?{% if page %}page={{ page }}&{% endif %}sort=title&order={{ order|default:'asc' }}">Todo
+                                                item</a>
+                                        </th>
+                                        page
+                                        <th scope="col">
+                                            <a class="text-decoration-none text-dark"
+                                               href="?{% if page %}page={{ page }}&{% endif %}sort=category&order={{ order|default:'asc' }}">Category</a>
+                                        </th>
+                                        <th scope="col">
+                                            <a class="text-decoration-none text-dark"
+                                               href="?{% if page %}page={{ page }}&{% endif %}sort=status&order={{ order|default:'asc' }}">Status</a>
+                                        </th>
+                                        <th scope="col">
+                                            <a class="text-decoration-none text-dark"
+                                               href="?{% if page %}page={{ page }}&{% endif %}sort=due_date&order={{ order|default:'asc' }}">Due
+                                                date</a>
+                                        </th>
                                     </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
+                                    </thead>
+                                    <tbody>
+                                    {% for task in tasks %}
+                                        <tr class="clickable-row" data-href="{% url 'task_detail' task.id %}">
+                                            <th scope="row">{{ forloop.counter }}</th>
+                                            <td><a class="text-decoration-none text-dark"
+                                                   href="{% url 'task_detail' task.id %}">{{ task.title }}</a></td>
+                                            <td><a class="text-decoration-none text-dark"
+                                                   href="{% url 'category_detail' task.category.id %}">{{ task.category }}</a>
+                                            </td>
+                                            <td>{{ task.get_status_display }}</td>
+                                            <td>{{ task.due_date }}</td>
+                                            <td></td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
 
-                            <div class="d-flex justify-content-center">
-                                <!-- Display pagination links -->
-                                {% if tasks.has_other_pages %}
-                                    <ul class="pagination">
-                                        {% if tasks.has_previous %}
-                                            <li class="page-item">
-                                                <a class="page-link" href="?page={{ tasks.previous_page_number }}{% if sort %}&sort={{ sort }}{% endif %}&order={% if order == 'asc' %} {{ 'desc' }} {% elif order == 'desc' %}{{ 'asc' }}{% endif %}">prev</a>
-                                            </li>
-                                        {% else %}
-                                            <li class="page-item disabled">
-                                                <span class="page-link">prev</span>
-                                            </li>
-                                        {% endif %}
-                                        {% for page in tasks.paginator.page_range %}
-                                            {% if tasks.number == page %}
-                                                <li class="page-item active">
-                                                    <span class="page-link">{{ page }}</span>
+                                <div class="d-flex justify-content-center">
+                                    <!-- Display pagination links -->
+                                    {% if tasks.has_other_pages %}
+                                        <ul class="pagination">
+                                            {% if tasks.has_previous %}
+                                                <li class="page-item">
+                                                    <a class="page-link" href="?page=
+
+                                                            {{ tasks.previous_page_number }}{% if sort %}&sort={{ sort }}{% endif %}&order={% if order == 'asc' %} {{ 'desc' }} {% elif order == 'desc' %}{{ 'asc' }}{% endif %}">prev</a>
                                                 </li>
                                             {% else %}
-                                                <li class="page-item">
-                                                    <a class="page-link" href="?page={{ page }}{% if sort %}&sort={{ sort }}{% endif %}&order={% if order == 'asc' %} {{ 'desc' }} {% elif order == 'desc' %}{{ 'asc' }}{% endif %}">{{ page }}</a>
+                                                <li class="page-item disabled">
+                                                    <span class="page-link">prev</span>
                                                 </li>
                                             {% endif %}
-                                        {% endfor %}
-                                        {% if tasks.has_next %}
-                                            <li class="page-item">
-                                                <a class="page-link" href="?page={{ tasks.next_page_number }}{% if sort %}&sort={{ sort }}{% endif %}&order={% if order == 'asc' %} {{ 'desc' }} {% elif order == 'desc' %}{{ 'asc' }}{% endif %}">next</a>
-                                            </li>
-                                        {% else %}
-                                            <li class="page-item disabled">
-                                                <span class="page-link">next</span>
-                                            </li>
-                                        {% endif %}
-                                    </ul>
-                                {% endif %}
+                                            {% for page in tasks.paginator.page_range %}
+                                                {% if tasks.number == page %}
+                                                    <li class="page-item active">
+                                                        <span class="page-link">{{ page }}</span>
+                                                    </li>
+                                                {% else %}
+                                                    <li class="page-item">
+                                                        <a class="page-link" href="?page=
+
+                                                                {{ page }}{% if sort %}&sort={{ sort }}{% endif %}&order={% if order == 'asc' %} {{ 'desc' }} {% elif order == 'desc' %}{{ 'asc' }}{% endif %}">{{ page }}</a>
+                                                    </li>
+                                                {% endif %}
+                                            {% endfor %}
+                                            {% if tasks.has_next %}
+                                                <li class="page-item">
+                                                    <a class="page-link" href="?page=
+
+                                                            {{ tasks.next_page_number }}{% if sort %}&sort={{ sort }}{% endif %}&order={% if order == 'asc' %} {{ 'desc' }} {% elif order == 'desc' %}{{ 'asc' }}{% endif %}">next</a>
+                                                </li>
+                                            {% else %}
+                                                <li class="page-item disabled">
+                                                    <span class="page-link">next</span>
+                                                </li>
+                                            {% endif %}
+                                        </ul>
+                                    {% endif %}
+                                </div>
                             </div>
                         </div>
                     </div>
