feat: add update task form

--- a/CW/week16/task_management/templates/task/tasks_list.html
+++ b/CW/week16/task_management/templates/task/tasks_list.html
@@ -79,7 +79,7 @@
                                                     <div class="form-group">
                                                         <label for="formGroupExampleInput3"></label>
                                                         <input required type="date" class="form-control"
-                                                               id="formGroupExampleInput3" placeholder="due_date"
+                                                               id="formGroupExampleInput3" placeholder="due_date" value="{{task.due_date|date:'Y-m-d'}}"
                                                                name="due_date">
                                                     </div>
                                                 </div>
