--- a/CW/week16/task_management/templates/task/task_detail.html
+++ b/CW/week16/task_management/templates/task/task_detail.html
@@ -18,6 +18,7 @@
             border: none;
             box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
         }
+
         .card-title {
             font-size: 2.5rem;
             font-weight: bold;
@@ -48,6 +49,106 @@
 {% block content %}
     <div class="content-wrapper">
         <div class="container px-4 px-lg-5">
+            <div class="row d-flex">
+                <div class="col-md-10">
+                    <div class="card p-3 py-4" style="background: rgba(108, 85, 85, .7)">
+                        <div class="mt-3">
+                            <a data-toggle="collapse" href="#collapseExample" role="button"
+                               aria-expanded="false"
+                               aria-controls="collapseExample"
+                               class="advanced text-decoration-none text-light"> Add new task
+                                <i class="fa fa-angle-down"></i>
+                            </a>
+                            <div class="collapse" id="collapseExample">
+                                <div class="card card-body">
+                                    <form action="{% url 'task_detail' task.id %}" method="POST">
+                                        {% csrf_token %}
+                                        <div class="row g-3 mt-2 flex-wrap">
+                                            <div class="col-md-4">
+                                                <div class="form-group text-dark">
+                                                    <label for="task_name"></label>
+                                                    <input type="text" class="form-control" id="task_name"
+                                                           placeholder="Task title:" value="{{ task.title }}"
+                                                           name="task_name">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-group">
+                                                    <label for="task_description"></label>
+                                                    <textarea class="form-control" id="task_description"
+                                                              placeholder="Task description:"
+                                                              name="task_description">{{ task.description }}</textarea>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-group">
+                                                    <select id="select" class="form-select" multiple
+                                                            aria-label="multiple select example" name="tags">
+                                                        <option selected>Select task tag(multi choice):</option>
+
+                                                        {% for tag in tags %}
+                                                            {% if tag in task.tag.all %}
+                                                                <option value="{{ tag.id }}"
+                                                                        selected> {{ tag.label }} </option>
+                                                            {% else %}
+                                                                <option value="{{ tag.id }}"> {{ tag.label }} </option>
+                                                            {% endif %}
+                                                        {% endfor %}
+                                                    </select>
+                                                    <label for="select" class="form-label select-label"></label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-group">
+                                                    <label for="status"></label>
+                                                    <select id="status" class="form-select" name="status">
+                                                        <option value="" selected disabled>Select task status:
+                                                        </option>
+                                                        {% for stat in stats %}
+                                                            {% if stat == task.status %}
+                                                                <option value="{{ stat }}" selected>{{ stat }}</option>
+                                                            {% else %}
+                                                                <option value="{{ stat }}">{{ stat }}</option>
+                                                            {% endif %}
+                                                        {% endfor %}
+                                                    </select>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-group">
+                                                    <select id="select" class="form-select" name="category">
+                                                        <option selected>Select task category:</option>
+                                                        {% for category in categories %}
+                                                            {% if category.id == task.category.id %}
+                                                                <option value="{{ category.id }}" selected> {{ category.name }} </option>
+                                                            {% else %}
+                                                                <option value="{{ category.id }}"> {{ category.name }} </option>
+                                                            {% endif %}
+
+                                                        {% endfor %}
+                                                    </select>
+                                                    <label for="select" class="form-label select-label"></label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-group">
+                                                    <label for="formGroupExampleInput3"></label>
+                                                    <input required type="date" class="form-control"
+                                                           id="formGroupExampleInput3" placeholder="due_date" value="{{task.due_date|date:'Y-m-d'}}"
+                                                           name="due_date">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <button class="btn btn-secondary btn-block">Add</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="row gx-4 gx-lg-5 align-items-center my-5">
                 <div class="col-lg-7">
                 </div>
@@ -57,16 +158,19 @@
                             <h5 class="card-title text-center">{{ task.title }}</h5>
                             <p class="card-text text-light">{{ task.description }}</p>
                             <p class="card-tag">Category:<a class="text-decoration-none"
-                                               href="{% url 'category_detail' task.category.id %}" style="color: #6c5555;">{{ task.category }}</a> | Tags:
+                                                            href="{% url 'category_detail' task.category.id %}"
+                                                            style="color: #6c5555;">{{ task.category }}</a> | Tags:
                                 {% for tag in task.tag.all %}
-                                   # {{ tag.label }}{% if not forloop.last %}, {% endif %}
+                                    # {{ tag.label }}{% if not forloop.last %}, {% endif %}
                                 {% endfor %}
                             </p>
                             <p class="card-small">Status: {{ task.get_status_display }}</p>
                             <p class="card-small">Due date: {{ task.due_date }}</p>
                             <div class="card-footer">
-                                <a class="btn btn-secondary rounded-3 btn-sm" href="{% url 'task_list' %}">Go to task list</a>
-                                <a class="btn btn-secondary rounded-3 btn-sm" href="{% url 'home_page' %}">Back to home</a>
+                                <a class="btn btn-secondary rounded-3 btn-sm" href="{% url 'task_list' %}">Go to task
+                                    list</a>
+                                <a class="btn btn-secondary rounded-3 btn-sm" href="{% url 'home_page' %}">Back to
+                                    home</a>
                             </div>
                         </div>
                     </div>
