--- a/CW/week16/task_management/templates/task/search.html
+++ b/CW/week16/task_management/templates/task/search.html
@@ -7,8 +7,8 @@
 
 {% block content %}
     {% if search_query %}
-        <section class="vh-100 pb-1">
-            <div class="container py-5 h-100">
+        <section class="pb-1">
+            <div class="container py-5">
                 <div class="container px-4 px-lg-5">
                     <div class="row d-flex justify-content-center">
                         <div class="col-md-10">
