--- a/CW/week16/task_management/templates/task/tasks_list.html
+++ b/CW/week16/task_management/templates/task/tasks_list.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block content %}
-    <section class="vh-100" style="background-color: grey;">
-        <div class="container py-5 h-100">
+    <section style="background-color: grey;">
+        <div class="container py-5">
             <div class="container px-4 px-lg-5">
                 <div class="row d-flex">
                     <div class="col-md-10">
